# scout

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
scout/: __init__.py
scout/slack_listener/: __init__.py  __main__.py  app.py  config.py  file_downloader.py  transforms.py  user_cache.py
scout/slack_listener/ingestion/: __init__.py  poller.py  socket_handler.py
scout/slack_listener/storage/: __init__.py  base.py  delta.py  factory.py  local.py  opensearch.py
